--- a/.gitignore
+++ b/.gitignore
@@ -46,5 +46,7 @@ nbbuild/
 dist/
 nbdist/
 .nb-gradle/
+nbactions.xml
+nb-configuraton.xml
 
 # End of https://www.gitignore.io/api/java,maven,netbeans
